--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,1 +1,21 @@
-<p>list-item works!</p>
+<h4>Detalle de la Factura</h4>
+@if(items.length > 0){
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>product</th>
+        <th>price</th>
+        <th>quantity</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of items; track $index){
+        <tr app-row-item [item]="item"></tr>
+      }
+    </tbody>
+  </table>
+} @else {
+  <div class="alert alert-warning">No tiene items la factura</div>
+}
+
