Agregando funcionalidad de eliminacion de items

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div>
-        <app-list-item [items]="invoice.items"/>
+        <app-list-item [items]="invoice.items" (removeEventEmitter)="removeItem($event)"/>
         <app-total [total]="invoice.total"/>
       </div>
     </div>
