--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -3,15 +3,16 @@
   <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <th>id</th>
-        <th>product</th>
-        <th>price</th>
-        <th>quantity</th>
+        <th>ID</th>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Remove</th>
       </tr>
     </thead>
     <tbody>
       @for (item of items; track $index){
-        <tr app-row-item [item]="item"></tr>
+        <tr app-row-item [item]="item" (removeEventEmitter)="onRemove($event)"></tr>
       }
     </tbody>
   </table>
