--- a/src/app/components/row-item/row-item.component.html
+++ b/src/app/components/row-item/row-item.component.html
@@ -2,3 +2,9 @@
 <td>{{item.product}}</td>
 <td>{{item.price}}</td>
 <td>{{item.quantity}}</td>
+<td>
+  <button class="btn btn-danger btn-sm"
+  (click)="onRemove(item.id)">
+    Remove
+  </button>
+</td>
