Agregando formulario para agregar item y las validaciones del formulario

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -16,6 +16,7 @@
       <div>
         <app-list-item [items]="invoice.items" (removeEventEmitter)="removeItem($event)"/>
         <app-total [total]="invoice.total"/>
+        <app-form-item (addItemEventEmitter)="addItem($event)"/>
       </div>
     </div>
   </div>
